

2011/xx/xx ver 0.3.3
   - adopt NVI (Non-Virtual Interface)
       - see "Effective C++"
   - replace gluBuild2DMipmaps() by GL_GENERATE_MIPMAP
   - add m3g-fwd.hpp
       - for forward declaration.
   - fix Appearance::setTexture()
   - fix IndexBuffer::getIndexCount() and getIndices()
   - fix Object3D::find()
   - fix Camera::lookAt()
   - fix Camera::animate(), Light::animate() and Sprite3D::animate().
   - fix parallel projection matrix of Camera.
   - fix KeyframeSequence which has only 1 frame.


2010/12/01  ver 0.3.2
   - introduce cmake
       - see README for compile.
   - separate some codes to extlib
       - exlib/m3g-reader-writer
       - exlib/png-helper
       - exlib/jpeg-helper
   - change MAX_TEXTURE_UNITS=4
   - argument of Transform is changed from "pass by value" to "pass by reference"
   - implement jpeg loader
   - implement Object3D::getReferences()
   - fix indexed png loding of Loader
   - fix blend color of Texture2D
   - fix picking of Group
   - and many bug fix.

2010/08/31  ver 0.3.1
   - replace Loader.cpp by new version which uses libM3GReaderWriter.
   - include source of libM3GReaderWriter.
   - exclude ruby-m3g as independent project.
   - verify to work under 32bit environment.
   - add mark() for ruby-m3g

2010/06/06  ver 0.3.0
   - Yes, I implemented all 30 classes defined by M3G-1.1 (JSR-184)
       - Some features are still buggy or untested.
       - But anyway, I implemented all.
   - remove GLEW
   - implement RayIntersection class.
   - implement picking.

2010/05/10  ver 0.2.0
   - implemente SkinndMesh, MorphingMesh.
   - implemente duplicate() method.
   - rewrite Loader class.
       - Now, compressed file is ok.
   - fix color component from (-128,127) to (0,255).
   - fix scale,biased coordinate.
       - Now, it's ok.

2010/04/08  ver 0.1.0
   - first release