@@ -1,0 +1,10 @@
+
+# staticリンク
+#APP_STL := stlport_static
+
+# dynamicリンク
+# 使用前にlibstlport_shared.soのロードを忘れずに！
+# static {
+#    System.loadLibrary("stlport_shared");
+# }
+APP_STL := stlport_shared
