@@ -1,5 +1,8 @@
 
 
+#include "m3g/Config.hpp"
+
+
 #ifndef __M3G_GL_HPP__
 #define __M3G_GL_HPP__
 
@@ -14,12 +17,23 @@
 // - ATI系は gl.h のみをインクルードすれば十分。
 //   定義しても動作に問題はない
 // - 2011.02.23 gluは必要無くなったのでコメントアウト.
+#ifdef USE_GL
 #ifndef GL_GLEXT_PROTOTYPES
 #define GL_GLEXT_PROTOTYPES
 #endif
 #include <GL/gl.h>
-//#include <GL/glu.h>
 #include <GL/glext.h>
+#endif
+
+// =====  Android =====
+// - Android用OpenGL ES.
+#ifdef USE_GL_ES
+#include <GLES/gl.h>
+#endif
+
+#if defined(USE_GL) && defined(USE_GL_ES)
+#error "Can't define both USE_GL and USE_GL_ES"
+#endif
 
 
 #endif
