@@ -6,6 +6,8 @@
    - replace gluBuild2DMipmaps() by GL_GENERATE_MIPMAP
    - add m3g-fwd.hpp
        - for forward declaration.
+   - fix Sprite3D::setCrop()
+       - when it is out of image region.
    - fix Appearance::setTexture()
    - fix IndexBuffer::getIndexCount() and getIndices()
    - fix Object3D::find()
